# lorecraft

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  AGENT_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CHANGELOG_RUST.md  CODE_AUDIT.md  FOUNDATION_IMPLEMENTATION.md  LICENSE  Makefile  README.md  admin-tui  audit.db  game.db  pyproject.toml  start.sh
.claude/: settings.json
.claude/agents/: backend-engineer-python.md  backend-engineer-rust.md  backend-engineer.md  code-reviewer.md  database-specialist.md  docs-writer.md  frontend-specialist.md  integrator.md  lorecraft-code-reviewer.md  orchestrator.md  pytest-writer.md  research-planner.md  rust-test-writer.md  test-qa-python.md  test-qa-rust.md  test-qa.md
.claude/hooks/: audit-log-post.sh  audit-log-pre.sh  format-lint-rust.sh  format-lint.sh  graph-refresh.sh  scripting-docs-check.sh  session-start.sh
.githooks/: post-commit
.github/workflows/: ci.yml
docs/: AGENT_ROUTING_AND_METRICS.md  ARCHITECTURE.md  COMBAT_SYSTEM.md  COMMAND_PARSER.md  DIALOGUE_NPCs_QUESTS.md  DISCONNECT_HANDLING.md  IMPLEMENTATION_GUIDES.md  Lorecraft Client.dc.html  NEXT_STEPS.md  PLAYER_AUTHENTICATION.md  STATUS.md  TODO.md  WORLD_BUILDING.md  WORLD_VERSIONING_CHANGESETS.md  admin_builder_guide.md  architecture.md  architecture_tiers.md  chat_feed_split.md  code_review_20260707.md  combat_design.md  combat_system.md  combat_tutorial.md  command_parser.md  death_resurrection.md  dialogue_npcs_quests.md  discipline_ability_system.md  disconnect_handling.md  e2e_test_plan.md  engine_content_separation.md  engine_core.md  feature-registration.md  feature_testing_guide.md  gamecontext_audit_20260710.md  genuine_gaps.md  help_topics.yaml  implementation_guides.md  inventory_equipment.md  issues.yaml  multi-agent-workflow.md  news.yaml  (+25 more)
docs/.archive/: TODO.md  status.md
docs/archive/: README.md  chat_feed_split.md  combat_system_tickbased_superseded.md  command_parser.md  death_resurrection.md  discipline_ability_system_design.md  feature-registration.md  inventory_equipment.md  player_authentication.md  scavenger_hunt.md  scripting_engine_design.md  session_replay.md  tier_split_refactor.md  tooling_infrastructure.md  trade_economy.md  transit_systems.md
docs/classic-export/: README.md  index.html
docs/engine/: architecture.md  architecture_tiers.md  combat_design.md  discipline_ability_system.md  engine_core.md  implementation_guides.md  observability.md  parser_and_commands.md  tier_modules.md
docs/guides/: combat_tutorial.md  user_guide.md
docs/performance/: db_engine_performance.md
docs/project/: engine_content_separation.md  feature_testing_guide.md  genuine_gaps.md  roadmap.md  roadmap_completed.md  wishlist.md
docs/worldbuilding/: admin_builder_guide.md  lore_ideas.md  roadmap_world.md  scripting_api.md  windhowl_pass_notes.md  world_building.md  world_versioning_changesets.md  worldbuilding_guide.md  zone_naming.md
lorecraft_parser_v1/: README.md
lorecraft_parser_v1/tools/: parser_diag.py
rust/: Cargo.toml
rust/crates/lorecraft-core/: Cargo.toml
rust/crates/lorecraft-core/src/: lib.rs  rng.rs
rust/crates/lorecraft-events/: Cargo.toml
rust/crates/lorecraft-events/src/: admins.rs  backpressure.rs  connections.rs  dispatch.rs  lib.rs
rust/crates/lorecraft-feature-look/: Cargo.toml
rust/crates/lorecraft-feature-look/src/: lib.rs
rust/crates/lorecraft-feature-move/: Cargo.toml
rust/crates/lorecraft-feature-move/src/: lib.rs
rust/crates/lorecraft-protocol/: Cargo.toml
rust/crates/lorecraft-protocol/schema/: version.json
rust/crates/lorecraft-protocol/src/: effects.rs  envelope.rs  gateway.rs  ids.rs  lib.rs  messages.rs  script.rs  snapshot.rs
rust/crates/lorecraft-replay/: Cargo.toml
rust/crates/lorecraft-replay/src/: lib.rs
rust/crates/lorecraft-runtime/: Cargo.toml
rust/crates/lorecraft-runtime/src/: lib.rs
rust/crates/lorecraft-scheduler/: Cargo.toml
rust/crates/lorecraft-scheduler/src/: lib.rs
rust/crates/lorecraft-script/: Cargo.toml
rust/crates/lorecraft-script-luau/: Cargo.toml
rust/crates/lorecraft-script-luau/src/: lib.rs
rust/crates/lorecraft-script/src/: lib.rs
rust/crates/lorecraft-server/: Cargo.toml
rust/crates/lorecraft-server/src/: auth.rs  disconnect.rs  execute.rs  forward.rs  gateway.rs  lib.rs  proxy.rs  route.rs  writer.rs  ws_admin.rs  ws_player.rs
rust/crates/lorecraft-server/tests/: execute.rs  proxy.rs  ws_admin.rs  ws_player.rs
rust/crates/lorecraft-store/: Cargo.toml
rust/crates/lorecraft-store/src/: lib.rs
rust/fixtures/look_only/: expected_result_hash.txt  request.json
scripts/: analyze_query_log.py  bootstrap-worktree.sh  create_audit_db.py  graphify-refresh.sh  import_world.py  perf_baseline.py  supervisor.py
src/lorecraft/: __init__.py  analytics.py  config.py  db.py  errors.py  main.py  observability.py  scripting_wiring.py  state.py  types.py
test_dbs/: lorecraft-dev-audit.db  lorecraft-dev-game.db
tests/: __init__.py  _rust_gateway.py
tests/e2e/: _helpers.py  conftest.py  test_admin_economy.py  test_admin_issues.py  test_admin_issues_edit.py  test_admin_issues_filter_sort.py  test_admin_issues_live_update.py  test_admin_players_edit.py  test_admin_progression_ui.py  test_admin_session.py  test_admin_tab_bar.py  test_admin_world_items_ui.py  test_admin_world_reseed_ui.py  test_auth_flows.py  test_auth_flows_login.py  test_auth_flows_session.py  test_chat_feed_split.py  test_gameplay_flows.py  test_gameplay_flows_command_input.py  test_gameplay_flows_dialogue.py  test_gameplay_flows_help.py  test_gameplay_flows_movement.py  test_gameplay_flows_vault.py  test_map_and_mobile_ui.py  test_multiplayer_realtime.py  test_multiplayer_realtime_items.py  test_multiplayer_realtime_narration.py  test_multiplayer_realtime_presence.py  test_panel_rendering.py  test_progression_ui.py  test_reconnect.py  (+1 more)
tools/: parser_diag.py
world_content/: abilities.yaml  celestial.yaml  combat_actions.yaml  disciplines.yaml  forage.yaml  harvest.yaml  hunts.yaml  marks.yaml  skill_tree.yaml  spawns.yaml  weather_fronts.yaml  world.yaml
(+737 files in other folders)
