[project]
name = "lorecraft"
version = "0.2.0"
description = "Persistent multiplayer text adventure engine."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.6",
  "pyjwt>=2.9.0",
  "pyyaml>=6.0.0",
  "starlette>=0.46.0,<1.0.0",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = ["basedpyright", "pytest", "ruff"]
admin-tui = ["textual>=0.80.0"]
e2e = ["playwright>=1.47.0"]

[tool.setuptools.package-data]
lorecraft = ["web/*", "web/admin/*"]

[tool.basedpyright]
include = ["src"]
exclude = ["src/lorecraft/admin/tui"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -m \"not e2e\""
markers = [
  "e2e: browser end-to-end tests against a live server (require `pip install -e .[e2e]` + `playwright install chromium`); run with `make test-e2e`",
]
