[project]
name = "lorecraft"
version = "0.40.1"
description = "Persistent multiplayer text adventure engine."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.6",
  "pyjwt>=2.9.0",
  "pyyaml>=6.0.0",
  "starlette>=0.46.0,<1.0.0",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "httpx",
  "websockets",
]
admin-tui = ["textual>=0.80.0"]
e2e = ["playwright>=1.47.0", "pytest"]

[tool.setuptools.package-data]
lorecraft = [
    "webui/player/*",
    "webui/player/static/**/*",
    "webui/player/templates/**/*",
    "webui/admin/*",
]

[tool.ruff.lint]
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"random".msg = "use GameRng (ctx.rng) — module-level random breaks audit-regression determinism (see docs/engine_core.md §3.6)"

[tool.ruff.lint.per-file-ignores]
# The random ban is a src/lorecraft game-determinism invariant (engine_core.md §3.6);
# test harness helpers (e.g. simulated network jitter) aren't game logic and don't
# feed the audit-regression diff.
"tests/**" = ["TID251"]

[tool.basedpyright]
include = ["src"]
exclude = ["src/lorecraft/webui/admin/tui"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." (repo root) makes `tests.simulation.conftest` importable from
# tests/simulation/test_*.py regardless of invocation style (bare `pytest`
# doesn't otherwise add the rootdir to sys.path the way `python -m pytest` does).
pythonpath = ["src", "."]
addopts = "-q -m \"not e2e and not simulation\""
markers = [
  "e2e: browser end-to-end tests against a live server (require `pip install -e .[e2e]` + `playwright install chromium`); run with `make test-e2e`",
  "simulation: multi-player simulation harness tests against a live server with real WebSocket clients; run with `make test-simulation`",
]

[tool.coverage.run]
source = ["src/lorecraft"]

[tool.coverage.report]
# CI's required gate (make test-cov) fails under this; see Makefile.
fail_under = 80
skip_covered = false
