[package]
name = "lorecraft-events"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
lorecraft-protocol = { path = "../lorecraft-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
