[package]
name = "lorecraft-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
