[package]
name = "lorecraft-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "lorecraft-gateway"
path = "src/bin/gateway.rs"

[dependencies]
lorecraft-protocol = { path = "../lorecraft-protocol" }
lorecraft-events = { path = "../lorecraft-events" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
# Pinned to 0.8.4: 0.8.9+ raises the MSRV to rustc 1.80, above this workspace's
# 1.75 pin. Exact-pin so a cargo update can't silently drift past that ceiling.
# The `ws` feature is enabled for axum's WebSocket upgrade extractor, which the
# 3b/3c player+admin socket cutover fills in (its route stubs already take it).
axum = { version = "=0.8.4", default-features = false, features = ["ws", "query", "json", "http1", "tokio"] }
# axum 0.8.4's transitive `axum-core ^0.5` now resolves to 0.5.3+ (rust-version
# 1.78); 0.5.2 is the newest release within the 1.75 pin, so pin it directly
# (same ceiling discipline as the axum pin above).
axum-core = "=0.5.2"
# Split the WS socket into sink/stream halves (writer task owns the sink).
# futures-util 0.3 declares rust-version 1.68 — within the 1.75 MSRV pin.
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Rust-minted command ids (idempotency keys; design decision 3).
# uuid 1.21+ raises the MSRV to rustc 1.85; 1.20 (rust-version 1.63) is the
# newest release within the workspace's 1.75 pin.
uuid = { version = ">=1, <1.21", features = ["v4"] }
# Binary-target (src/bin/gateway.rs) error handling + log output.
anyhow = "1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
# tempfile 3.25+ can resolve getrandom 0.4 (rust-version 1.85); 3.24 is the
# newest release whose dependency tree stays within the workspace's 1.75 pin.
tempfile = ">=3, <3.25"
serde_json = "1.0"
# Integration-test WS client driving the real /ws route. Pinned below 0.27:
# tungstenite 0.27+ raises the MSRV above this workspace's 1.75 pin
# (same ceiling discipline as the axum pin above).
tokio-tungstenite = { version = ">=0.26, <0.27", default-features = false, features = ["connect", "handshake"] }
